started implementing the functions to store and retrieve the blocks and transactions on disk